# FastAPI-Authentication

./: .env.prod  .gitignore  main.py  pyproject.toml
auth/: jwt_utils.py  middelware.py  models.py  router.py  schemas.py  services.py  utils.py
database/: config.py  dependencies.py
